[package]
name = "sunrise-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
chrono = "0.4.19"
# sunrise = { git = "https://github.com/mklein994/rust-sunrise" }
wee_alloc = { version = "0.4", optional = true }
sunrise = { git = "https://github.com/DAPYXY/rust-sunrise", branch = "twilight" }
wasm-bindgen = "0.2.78"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
