[package]
name = "sunrise-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jiff = { version = "0.1.5", features = ["js"] }
# sunrise = { git = "https://github.com/mklein994/rust-sunrise" }
sunrise = { git = "https://github.com/DAPYXY/rust-sunrise", branch = "twilight" }

[target.'cfg(target_family = "wasm")'.dependencies]
wee_alloc = "0.4"
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
