[package]
name = "sunrise-cli"
version = "0.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jiff = { version = "0.2.1", features = ["js"] }
sunrise = { git = "https://github.com/mklein994/rust-sunrise", branch = "feature/add-jiff-support", default-features = false, features = ["jiff"] }
# sunrise = { git = "https://github.com/DAPYXY/rust-sunrise", branch = "twilight" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
